syntax = "proto3";
package proto;

message DBItem{
    bytes   Key  = 1;
    bytes   Value  = 2;
    uint64 StartTS =3;
    uint64 CommitTS=4;
    uint32 ValueType =5;

}

message DBQueryParam{
    bytes  StartKey  = 1;
    bytes  EndKey  = 2;
}

message DBItems{
    repeated DBItem Items =1;
}

